# heavens_stdout

./: .gitmodules  CMakeLists.txt  README.md
resources/: resources.qrc
src/: CMakeLists.txt  constants.h  generator.cpp  generator.h  main.cpp
src/core/: CMakeLists.txt  heavens_stdout.cpp  heavens_stdout.h  heavens_stdout.ui  heavensstdout.cpp  heavensstdout.h  heavensstdout.ui  mainScalableWidget.cpp  mainScalableWidget.h  main_widget.ui  scalableWidget.cpp  scalableWidget.h
src/helpers/: CMakeLists.txt  constants.h  generator.cpp  generator.h
src/modes/: CMakeLists.txt  stringSearchModeWidget.cpp  stringSearchModeWidget.h  stringSearchModeWidget.ui  talkModeWidget.cpp  talkModeWidget.h  talkModeWidget.ui
